﻿<p>This is the «SITE-NAME»'s news stream, live since <b>19/09/2019</b>. Check back often to keep abreast of the most relevant developments.</p>

<h2>19/09/2019</h2>
<h3>Bookmarklet</h3>
<p>The game bar now can be applied to any online puzzlescript game by means of a <a href="game-bar.html#Bookmarklet">Bookmarklet</a>, a suggestion by ««P-PRE»MINOTALEN«P-POS»».</p>

<h2>11/09/2019</h2>
<h3>Hints system</h3>
<p>The game bar now includes support for Hints, a suggestion by ««P-PRE»MINOTALEN«P-POS»». Hints were added to <a href="platformer-template.html#hints">Platformer Template</a>.</p>

<h2>07/09/2019</h2>
<h3>Keyboard Keys styling</h3>
<p>Keyboard keys across the «SITE-NAME» are now nicely <kbd>S</kbd> <kbd>T</kbd> <kbd>Y</kbd> <kbd>L</kbd> <kbd>E</kbd> <kbd>D</kbd>.</p>

<h2>02/09/2019</h2>
<h3>Undo: press and hold</h3>
<p>The game bar's undo button now supports <kbd>press and hold</kbd> to undo several moves at once, useful in touch devices.</p>

<h2>13/08/2019</h2>
<h3>Custom linear level progressions</h3>
<p>The game bar's level selector now supports linear level progression and boss levels.</p>

<h2>08/08/2019</h2>
<h3>Colour matching</h3>
<p>The game bar's colour now adapts automatically to the color scheme of the current game.</p>

<h2>03/08/2019</h2>
<h3>Fullscreen</h3>
<p>The game bar's now has a fullscreen mode. Activate it by pressing the button or <kbd>F</kbd>.</p>

<h2>01/08/2019</h2>
<h3>Logo hovering</h3>
<p>After a mathematical simplification, the «SITE-NAME»'s logo, converted to a svg vector, reveals a different pattern on hover.</p>

<h2>12/07/2019</h2>
<h3>Burokku Konekuta</h3>
<p><a href="burokku-konekuta.html">Burokku Konekuta</a> is released.</p>

<h2>19/05/2019</h2>
<h3>Platformer-template</h3>
<p><a href="platformer-template.html">Platformer Template</a> matures into its final version.</p>

«GUESTBOOK-POST-TEXT»«GUESTBOOK-ADD»