@@ -1,20 +1,24 @@
 <!DOCTYPE html><html lang="en" xml:lang="en" prefix="og: http://ogp.me/ns#"><head><meta http-equiv="content-type" content="text/html; charset=UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><link href="images/favicon-32x32.png" rel="icon" type="image/png"/><link href="images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/><link href="images/splash.png" rel="apple-touch-icon"/><link href="codes/index.css" rel="stylesheet" type="text/css"/><title>News</title>
 <meta name="description" content=" This is the Creative Archive s news stream, live since 19/09/2019 . Check back often to keep abreast of the most relevant developments. 
 
+ 21/09/2019 
+ Skilleblokker 
+ Skilleblokker spillet utgitt! 
+
  19/09/2019 
  Bookmarklet 
- The game bar now can be applied to any online puzzlescript game by means of a Bookmarklet , a suggestion by . 
-
- 1..."/>
+ The game bar now can be applied to any online puzzlescript game by means ..."/>
 
 <meta property="og:title" 		content="News"/>
-<meta property="og:description"	content=" This is Creative Archive s news stream, live since 19/09/2019 . Check back often to keep abreast of the most relevant developments. 
+<meta property="og:description"	content=" This is the Creative Archive s news stream, live since 19/09/2019 . Check back often to keep abreast of the most relevant developments. 
+
+ 21/09/2019 
+ Skilleblokker 
+ Skilleblokker spillet utgitt! 
 
  19/09/2019 
  Bookmarklet 
- The game bar now can be applied to any online puzzlescript game by means of a Bookmarklet , a suggestion by . 
-
- 1..."/>
+ The game bar now can be applied to any online puzzlescript game by means ..."/>
 <meta property="og:url"			content="https://pedropsi.github.io/news.html"/>
 <meta property="og:image"		content="https://pedropsi.github.io/images/news.png"/>
 
@@ -42,6 +46,10 @@
 <a href="games.html" class="nav-link" style="max-width: 728px;">Games</a>
 <a href="hall-of-fame.html" class="nav-link" style="max-width: 728px;">Hall of Fame</a>
 <a href="subscribe.html" class="nav-link" style="max-width: 728px;">Subscribe</a></nav><div class="rainbowline"></div></div><div class="section"><div class="container"><h1 class="title">News</h1><div class="whiteboard"><div class="text prose post" id="post"><p>This is the Creative Archive's news stream, live since <b>19/09/2019</b>. Check back often to keep abreast of the most relevant developments.</p>
+
+<h2>21/09/2019</h2>
+<h3>Skilleblokker</h3>
+<p><a href='skilleblokker.html' target='_blank'>Skilleblokker</a> spillet utgitt!</p>
 
 <h2>19/09/2019</h2>
 <h3>Bookmarklet</h3>
@@ -77,11 +85,13 @@
 
 <h2>12/07/2019</h2>
 <h3>Burokku Konekuta</h3>
-<p><a href="burokku-konekuta.html">Burokku Konekuta</a> is released.</p>
+<p><a href="burokku-konekuta.html">Burokku Konekuta</a> がリリースされました!</p>
 
 <h2>19/05/2019</h2>
 <h3>Platformer-template</h3>
-<p><a href="platformer-template.html">Platformer Template</a> matures into its final version.</p></div></div><div class="tags buttonrow"><a class="tag button" href="posts-by-date.html">Friday, 20/09/2019</a><a class="tag button" href="tag-Creative-Archive.html">Creative-Archive</a>
+<p><a href="platformer-template.html">Platformer Template</a> matures into its final version.</p>
+
+<p>Enjoyed <b>News</b>? Add <b>your message</b> below to the Creative Archive's <b><a href="guestbook.html">guestbook</a></b>!</p><div class="button centered" onclick="RequestGuestbook()" tabindex="0">Leave your message!</div></div></div><div class="tags buttonrow"><a class="tag button" href="posts-by-date.html">Friday, 20/09/2019</a><a class="tag button" href="tag-Creative-Archive.html">Creative-Archive</a>
 <a class="tag button" href="tag-Log.html">Log</a>
 <a class="tag button" href="tag-Post.html">Post</a>
 <a class="tag button" href="tag-Press.html">Press</a>
