@@ -1,5 +1,9 @@
 ﻿<p>This is the «SITE-NAME»'s news stream, live since <b>19/09/2019</b>. Check back often to keep abreast of the most relevant developments.</p>
 
+<h2>21/09/2019</h2>
+<h3>Skilleblokker</h3>
+<p><a href='skilleblokker.html' target='_blank'>Skilleblokker</a> spillet utgitt!</p>
+
 <h2>19/09/2019</h2>
 <h3>Bookmarklet</h3>
 <p>The game bar now can be applied to any online puzzlescript game by means of a <a href="game-bar.html#Bookmarklet">Bookmarklet</a>, a suggestion by ««P-PRE»MINOTALEN«P-POS»».</p>
@@ -34,7 +38,7 @@
 
 <h2>12/07/2019</h2>
 <h3>Burokku Konekuta</h3>
-<p><a href="burokku-konekuta.html">Burokku Konekuta</a> is released.</p>
+<p><a href="burokku-konekuta.html">Burokku Konekuta</a> がリリースされました!</p>
 
 <h2>19/05/2019</h2>
 <h3>Platformer-template</h3>
